# pex_artifacts

./: .env.example  .gitignore  README.md  pyproject.toml
01-batch-processing/tasks/: README.md
01-batch-processing/tasks/task-01-read-structured-data/: README.md  download_data.py  qa.md  setup_pg.sql  solution.py
src/batch_processing/01_tv_series/: README.md  basic_solution.py  download_data.py  optional_data_load.py  optional_data_read_and_transform.py
src/batch_processing/02_pizza_orders/: README.md  download_data.py  solution.py
src/batch_processing/03_english_words/: README.md  download_data.py  solution.py
src/batch_processing/04_disease_symptoms/: README.md  download_data.py  solution.py
src/batch_processing/05_error_handling/: README.md  solution.py
src/batch_processing/06_data_from_various_sources/: README.md  download_data.py  solution.py
src/batch_processing/07_fraudulent_transactions_predictions/: README.md  download_data.py  solution.py
src/batch_processing/08_food_orders/: README.md  download_data.py  solution.py
src/batch_processing/09_bank_marketing/: README.md  download_data.py  solution.py
src/batch_processing/10_complex_files/: README.md  solution.py
src/batch_processing/11_spark_cluster/: README.md  docker-compose.yml  spark_submit.sh  spark_ui_debug.py
src/batch_processing/12_performance_optimization/: README.md  baseline_solution.py  docker-compose.yml  download_data.py  optimized_solution.py  run_baseline.sh  run_optimized.sh
src/batch_processing/13_slowly_changing_dimension/: README.md  scd_type2.sql
src/batch_processing/disease_symptoms/: README.md  download_data.py  solution.py
src/batch_processing/english_words/: README.md  download_data.py  solution.py
src/batch_processing/pizza_orders/: README.md  download_data.py  solution.py
src/batch_processing/tv_series/: README.md  basic_solution.py  download_data.py  optional_data_load.py  optional_data_read_and_transform.py  solution.py
src/cloud_computing/01_data_distribution/: README.md  STRATEGY.md  schema.cql
src/cloud_computing/02_data_partitioning/: PARTITIONING.md  README.md  download_data.py  partitioning.py
src/data_lake/01_ingest_data/: README.md  batch_ingest.py  docker-compose.yml  download_data.py  load_postgres.py  (+1 more)
src/programming_languages/10_pack_and_distribute/: README.md  pyproject.toml
src/programming_languages/10_pack_and_distribute/salary_analyzer/: __init__.py  analyzer.py
(+120 files in other folders)
