[project]
name = "pex-artifacts"
version = "0.1.0"
description = "Portfolio artifacts for Senior Big Data Software Engineer promotion"
requires-python = ">=3.10"
dependencies = [
    "pyspark==4.1.2",
    "pandas>=2.2.2",
    "kaggle>=1.6.0",
    "mysql-connector-python>=9.0.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=24.0.0",
    "certifi>=2026.5.20",
    "pdfquery>=0.4.3",
    "openpyxl>=3.1.5",
    "lxml>=6.1.1",
    "pymupdf>=1.27.2.3",
    "cinemagoer>=2023.5.1",
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "build>=1.5.0",
]
